--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ h1 {
 }
 header p {
   margin-top: 0.2em;
-  font-size: .8em;
+  font-size: .9em;
 }
 .gray {
 	color: grey;
@@ -43,7 +43,7 @@ header p {
   shape-rendering: crispEdges;
 }
 .axis text {
-  font-size: .5em;
+  font-size: .6em;
 }
 .area path {
     fill: #bae4b3;
@@ -76,8 +76,9 @@ table caption {
     color: grey;
     font-size: .8em;
 }
-thead {
+thead th {
   font-size: .9em;
   font-weight: normal;
+  padding: .2em;
 }
 
